--- a/Fase 1/Aquecimento/02-CSS/style.css
+++ b/Fase 1/Aquecimento/02-CSS/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: rgb(1, 20, 146);
 }
 
 ul{
@@ -10,4 +11,10 @@ ul{
 
 a{
     text-decoration: none;
+}
+
+body{
+    /* background: url(./img/background.jpg) no-repeat center center fixed;
+    background-size: cover; */
+    background: linear-gradient(90deg, #bdc3c7, #2c3e50);
 }
