--- a/Fase 1/Aquecimento/02-CSS/style.css
+++ b/Fase 1/Aquecimento/02-CSS/style.css
@@ -19,14 +19,30 @@ a{
 }
 
 body{
-    /* background: url(./img/background.jpg) no-repeat center center fixed;
-    background-size: cover; */
-    background: linear-gradient(90deg, #bdc3c7, #2c3e50);
+    background: url(./img/background.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+
+header{
+    font-size: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header ul{
+    font-size: 20px;
+    display: flex;
+}
+
+header ul li{
+    padding: 10%;
 }
 
 .container{
     text-align: center;
 }
+
 
 .container .texto h1{
     font-size: 50px;
@@ -42,6 +58,12 @@ body{
     margin: 0 auto;
 }
 
+.container h2{
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+
 .form{
     font-size: 18px;
     width: 40%;
@@ -54,4 +76,25 @@ body{
 
 .form button{
     width: 10%;
+}
+
+.flex{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex div{
+    border: 1px solid black;
+    margin: 15px;
+    flex-basis: 100%;
+    background-color: aqua;
+}
+
+.flex img{
+    width: 100px;
+}
+
+.flex .python img{
+    width: 200px;
 }
