--- a/Fase 1/Aquecimento/02-CSS/style.css
+++ b/Fase 1/Aquecimento/02-CSS/style.css
@@ -45,6 +45,15 @@ header ul li{
     padding: 10%;
 }
 
+header ul li a{
+    transition: 300ms;
+}
+
+header ul li a:hover{
+    color: blue;
+    text-decoration: underline;
+}
+
 .container{
     text-align: center;
 }
@@ -74,15 +83,34 @@ header ul li{
     font-size: 18px;
     width: 40%;
     margin: 0 auto;
-    border: thick double black;
 }
 
 .form input{
     width: 35%;
+    padding: 5px 10px;
+    border-radius: 5px 0px 0px 5px;
 }
 
 .form button{
     width: 10%;
+    height: 34px;
+    background:linear-gradient(to right, rgb(134, 134, 255) 50%, blue 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    color: #464646;
+    padding: 5px 10px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: all 300ms ease-out;
+    border-radius: 0px 5px 5px 0px;
+    margin-top: 20px;
+    margin-left: -5px;
+}
+
+.form button:hover{
+    background-position: left bottom;
+    color: aliceblue;
 }
 
 .flex{
